# concurso-coach-ai

./: .env.example  .gitignore  BUGFIX_TESTING_GUIDE.md  Fase_1.md  Fase_2.md  Fases_3_4_5.md  Fases_6_7.md  RAILWAY_DEPLOYMENT.md  README.md  docker-compose.yml  pitch.html  railway.json
.github/ISSUE_TEMPLATE/: bug.md  feature.md
backend/: Dockerfile  Dockerfile.flower  Dockerfile.worker  README.md  notebook_testes.ipynb  pyproject.toml
backend/app/: celery_worker.py  main.py  models.py
backend/app/contests/: ai_schemas.py  crud.py  edict_processor.py  models.py  prompts.py  router.py  schemas.py  tasks.py
backend/app/core/: ai_service.py  analytics.py  constants.py  database.py  error_codes.py  exception_handlers.py  exceptions.py  langchain_service.py  logging.py  middleware.py  prompt_templates.py  security.py  settings.py  validators.py
backend/app/guided_lesson/: README.md  agents.py  crud.py  models.py  router.py  schemas.py
backend/app/study/: agents_graph.py  ai_schemas.py  ai_validation_service.py  analytics_service.py  chat_router.py  chat_schemas.py  data_collector.py  guided_learning_agents.py  guided_learning_persistence.py  guided_learning_schemas.py  guided_learning_service.py  models.py  models_analytics.py  ownership_service.py  plan_generator.py  plan_organizer.py  plan_persister.py  prompts.py  router.py  schemas.py  services.py  sessions_router.py  suggestions_service.py  topic_analyzer.py  ui_schemas.py
backend/app/users/: auth.py  crud.py  models.py  router.py  schemas.py
backend/docs/: EXCEPTION_HANDLING.md  SECURITY.md
backend/tests/: test_enrollment_bug_fix.py
backend/tests/security/: test_headers_and_limits.py
backend/tests/unit/test_contests/: test_edict_processor.py  test_tasks_delegation.py
backend/tests/unit/test_core/: README.md  __init__.py  test_ai_service.py  test_ai_service_errors.py  test_constants.py  test_database.py  test_exceptions.py  test_settings.py  test_validators.py
backend/tests/unit/test_study/: test_plan_generator_equivalence.py  test_validators_integration.py
frontend/: .env.production  Dockerfile  dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/components/: OnboardingFlow.tsx  PendingSelfAssessmentCTA.tsx  StudyPlanManager.tsx  StudyPlanView.tsx  UserMenu.tsx
frontend/src/hooks/: useDashboardData.ts
(+17 files in other folders)
