[project]
name = "concurso-coach-ai-backend"
version = "0.1.0"
description = "Backend for Concurso Coach AI"
requires-python = ">=3.10"

[tool.uv]
# keep default settings

[project.dependencies]
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
SQLAlchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
python-jose = {version = "^3.3.0", extras=["cryptography"]}
passlib = {version = "^1.7.4", extras=["bcrypt"]}
python-dotenv = "^1.0.1"
requests = "^2.32.3"
# Security additions
python-magic = "^0.4.27"
slowapi = "^0.1.9"
bleach = "^6.2.0"
email-validator = "^2.2.0"
# Google Cloud
google-cloud-storage = "^2.18.0"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["backend/app"]
