[project]
name = "backend"
version = "0.1.0"
description = "Concurso Coach AI Backend"
requires-python = ">=3.10"

dependencies = [
    # existentes...
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "langchain-community>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-postgres>=0.0.6",
    "langchain-google-genai>=2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["app"]
addopts = "-q"
